--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-less": "^3.3.2",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.6.1",
+    "gulp-uglify": "^3.0.0",
     "path": "^0.12.7"
   }
 }
